# demand_planner

./: .gitignore  README.md  env.example  pyproject.toml
app/: app.py  parent_app.py
data/processed/: sales_raw_sample.parquet  test_sales.parquet
data/processed/features/: features_SKU.parquet
data/processed/series/: series_Market-Channel_M.parquet  series_Market-Channel_W.parquet  series_Range Segment_M.parquet  series_Range Segment_W.parquet  series_SKU_Forecast_M.parquet  series_SKU_Forecast_W.parquet  series_SKU_M.parquet  series_SKU_Market-Channel_M.parquet  series_SKU_Market-Channel_W.parquet  series_SKU_W.parquet  series_Style_Colour_Gender_M.parquet  series_Style_Colour_Gender_W.parquet  series_Style_M.parquet  series_Style_W.parquet
src/dp/: __init__.py  aggregate.py  api.py  api_backup.py  api_parent.py  api_simple.py  backtest.py  cli.py  config.py  constants.py  data_cleaner.py  etl_reconstruct.py  features.py  inventory.py  planner_views.py  schemas.py  sku_utils.py  test_data.py  xml_parser.py
src/dp/models/: __init__.py  baselines.py  forecast_api.py  ml_models.py  stat_models.py
tests/: __init__.py  test_etl_reconstruct.py
